app/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: myapp-ingress
  namespace: myapp-namespace
spec:
  ingressClassName: nginx
  rules:
  - host: mayapp.fmownspace.com
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mayapp.fmownspace.com
    secretName: myapp-tls
